Update Extractor de datos.ipynb
Elimino mi key personal de Alpha Vantage

--- a/Extractor de datos.ipynb
+++ b/Extractor de datos.ipynb
@@ -64,7 +64,7 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "def get_data(symbol, interval, month):\n",
-    "    url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol={symbol}&interval={interval}&month={month}&outputsize=full&apikey=RFER9YLX4X9XH3RQ&datatype=csv\"\n",
+    "    url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol={symbol}&interval={interval}&month={month}&outputsize=full&apikey=###INTRODUCE AQUÍ TU PROPIA KEY###&datatype=csv\"\n",
     "    response = requests.get(url)\n",
     "    print(url)\n",
     "    return response.text\n",
